@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0


class ScheduledVaccine {
int snsNumber
LocalDateTime date
VaccineType vaccineType
+getSnsNumber()
+getDate()
+getVaccineType()
}

'class Company

class VaccinationCenter {
-String strID
-String strName
-String strPhoneNumber
-String strEmail
-String strFax
-String strWebsite
-String strOpeningHour
-String strClosingHour
-String strSlotDuration
-String strVaccinesPerSlot
-String strRoad
-String strZipCode
-String strLocal
-String strCenterCoordinatorID
-List<ScheduledVaccine> scheduledVaccineList
-List<Arrival> arrivalsList
+getArrivalsList()
+getStrOpeningHour()
+cleanArrivalsList()
+removeAppointment(ScheduledVaccine appointment)
+registerArrival(Arrival arrival)
+checkIfAlreadyRegistered(int snsNumber)
}


class RegisterArrivalOfSNSUserUI

class RegisterArrivalOfSNSUserController{
+checkIfAlreadyRegistered(int snsNumber)
+getUserAppointment(int snsNumber, List<ScheduledVaccine> vaccineAppointments)
+validateDateAndTime()
+registerArrival(int snsNumber, VaccinationCenter vaccinationCenter)
+validateVaccinationCenters()
}

class Arrival {
-int snsNumber
-LocalDateTime dateTime
-VaccineType vaccineType
+validateDateAndTime(LocalDateTime date, VaccinationCenter vaccinationCenter)
-checkDate(LocalDateTime date)
-checkTime(LocalDateTime date)
-subtractTimes(int slotDuration, LocalDateTime date)
-sumTimes(LocalDateTime date)
}


left to right direction

RegisterArrivalOfSNSUserController .up-> Arrival
RegisterArrivalOfSNSUserController ..> VaccinationCenter
RegisterArrivalOfSNSUserController ..> ScheduledVaccine
RegisterArrivalOfSNSUserUI -> RegisterArrivalOfSNSUserController

@enduml